fix: long overdue field alignment
specifically for desktop

--- a/public/styles/keystone/forms.less
+++ b/public/styles/keystone/forms.less
@@ -4,20 +4,40 @@
 // of this file so they inherit styles
 // --------------------------------------------------
 
-/*
-	Form control wrapper
-	==============================
-	
-	.form-control-wrapper should be exclusively used for attaching validation to
-	when no other ancestor is applicable. It has no ornamental styles of it's own.
-*/
 
 @input-vspacing: 12px;
 
 // Adding vertical spacing between form elements
-.field, .form-indent, .field-ui .row, #signin-form .row {
+.field,
+.field,
+.form-indent,
+.field-ui .row,
+#signin-form .row {
 	margin-top: @input-vspacing;
 }
+
+
+// Field Item
+// I usually house controls like buttons aswell as the input
+.field-item {
+	margin-bottom: floor(@input-vspacing / 2);
+	position: relative;
+}
+.field-item-button {
+	display: inline-block;
+	font-size: 16px;
+	height: 100%;
+	line-height: @input-height-base;
+	padding: 0 @font-size-small;
+	position: absolute;
+	right: 0;
+
+	a&:focus,
+	a&:hover {
+		text-decoration: none;
+	}
+}
+
 
 // Form headings
 .form-heading {
@@ -211,18 +231,25 @@ label.checkbox {
 .field-type-name,
 .field-type-password {
 	.field-ui {
-		.make-sm-column(7);
-		.make-md-column(5);
+		.make-sm-column(9);
+		.make-md-column(6);
+		.make-lg-column(5);
 	}
 }
 
 // Short Strings
 .field-type-url,
+.field-type-datetime,
+.field-type-date,
 .field-type-email,
+.field-type-text,
+.field-type-select,
+.field-type-textarray,
 .field-type-key {
-	.field-ui.width-full {
-		.make-sm-column(7);
-		.make-md-column(5);
+	.field-ui {
+		.make-sm-column(9);
+		.make-md-column(6);
+		.make-lg-column(5);
 	}
 }
 
@@ -347,15 +374,15 @@ label.checkbox {
 .form-inline .field-inline--xl { width: 400px; }
 
 
-//Multi-value number/text fields
-.form-control.multi {
-	width: ~"calc(100% - 35px)";
-	display: inline-block;
-}
 
-.field-type-textarray {
-	.field-item {
-		margin-bottom: 6px;
+
+// Hacky improvements for desktop
+// ------------------------------
+
+@media (min-width: @screen-md) {
+	.field-type-date .form-control,
+	.field-type-datetime .form-control {
+		width: 165px;
 	}
 }
 
